# deye-controller

./: LICENSE  README.rst  pyproject.toml
deye_controller/: __init__.py  deye_reader.py  logger_scan.py  sell_programmer.py
deye_controller/inverter/: __init__.py  control.py
deye_controller/modbus/: __init__.py  enums.py  protocol.py  single_phase.py  utils.py
deye_controller/utils/: __init__.py  connection.py  groups.py  monkey_patch.py
docs/: MODBUS_RTU_DEYE.doc  sunsynk_modbus_deye_single_phase.docx
examples/: README.rst  README_PATCH.rst  all.json
