[tool.poetry]
name = "deye-controller"
version = "0.2.0"
description = "MODBUS Controller for DEYE inverters"
authors = ["githubDante <github@dantetk.org>"]
readme = "README.rst"
packages = [{include = "deye_controller"}]
repository = 'https://github.com/githubDante/deye-controller'
license = "MIT"
keywords = ['deye', 'inverter', 'deye-intverter']

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries',

]

[tool.poetry.scripts]
deye-regtest = 'deye_controller.deye_reader:test_register'
deye-regwrite = 'deye_controller.deye_reader:test_write'
deye-read = 'deye_controller.deye_reader:read_from_inverter'
deye-scan = 'deye_controller.deye_reader:scan_for_loggers'


[tool.poetry.dependencies]
python = ">=3.8"
pysolarmanv5 = ">=3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
